Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-113195

QtCharts/QXYSeries::colorBy method behave incorrectly after points are selected in QScatterSeries.

    XMLWordPrintable

Details

    • 96d80c958 (dev), 794d35c25 (6.6), 83ced86de (6.5)

    Description

      When a scatter series has some currently selected points (with series selection color set different from marker color) and colorBy method is called, scatter points appear as expected at first. But on trying to resize the chart window, selection color is no longer visible on the points as if they are not selected.
      (However selection color remains intact if colorBy method was not called.)

      Attached sample code to reproduce the above problem. Try resizing the window to see the bug.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            e0348803 Miikka Heikkinen
            viniyogita viniyogita
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes