Fix brush setting on scatter series items when selected

The selected color brush got overridden in updateGeometry() if custom
colored points were also used.

Fixes: QTBUG-113195
Pick-to: 6.6 6.5
Change-Id: I6dc95e008f8b7f7591b8f7d25c7b6fa2f051eb38
Reviewed-by: Mahmoud Badri <mahmoud.badri@qt.io>